Updated Contact Page

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,11 @@
           <div class="col-6">
             <h1>Contact Us!</h1>
           <img src="assets/images/hello.jpg" class="img-thumbnail" alt="hello"> 
+          <a href="https://github.com/ryanwit" target="_blank" type="button" class="btn btn-success" >My GitHub Page</a>
+          <a href="https://www.linkedin.com/in/ryanwitherspoon/" target="_blank" type="button" class="btn btn-success" >My LinkedIn Page</a>
+          <a href="https://drive.google.com/file/d/1R_e3Z3FRO_PTFE2hwBZ52JyFSmzqR3eI/view?usp=sharing" target="_blank" type="button" class="btn btn-success" >My Resume</a>
         </div>
+        
           
       </div>
     </div>
