Updating Format on Portfolio Page

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,48 +37,86 @@
 
       <!-- created container section for images of portfolio - images are mobile responsive -->
   <div class="container">
+    <div class="row">
+        <div class="col-4 card" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pic1.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Password Generator</h5>
+              <p class="card-text">This website was created to randomly generate a password based of users criteria</p>
+            </div>
+            <div class="card-body">
+              <a href="https://ryanwit.github.io/homework03_password_generator/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/homework03_password_generator" target="_blank" class="card-link">Repo Link</a>
+            </div>
+          </div>
 
-      <div class="col-3 card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/pic1.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Password Generator</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Deployed Link</a>
-          <a href="#" class="card-link">Repo Link</a>
-        </div>
+          <div class="col-4 card" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pic2.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Code Quiz</h5>
+              <p class="card-text">This quiz was created to test the users knowledge of javascript and html
+                This quiz will keep track of your score as you move through the quiz</p>
+            </div>
+            <div class="card-body">
+              <a href="https://ryanwit.github.io/homework04_code_quiz/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/homework04_code_quiz" target="_blank"  class="card-link">Repo Link</a>
+            </div>
+          </div>
+
+          <div class="col-4 card" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pic3.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Weather Dashboard</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="card-body">
+              <a href="https://ryanwit.github.io/homework_06_weather_dashboard/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/homework_06_weather_dashboard" target="_blank"  class="card-link">Repo Link</a>
+            </div>
+          </div>
     </div>
 
-      <div class="col-3 card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/pic1.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Coding Quiz</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Deployed Link</a>
-          <a href="#" class="card-link">Repo Link</a>
-        </div>
-      </div>
+    <div class="row">
+        <div class="col-4 card bg-light mb-3" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pic4.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Project One</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="card-body">
+              <a href="#" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="#" target="_blank"  class="card-link">Repo Link</a>
+            </div>
+          </div>
 
-      <div class="col-3 card" style="width: 18rem;">
-        <img class="card-img-top" src="assets/images/pic1.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Weather Dashboard</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-        <div class="card-body">
-          <a href="#" class="card-link">Deployed Link</a>
-          <a href="#" class="card-link">Repo Link</a>
-        </div>
-      </div>
-       
-      </div>
+          <div class="col-4 card" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/pic5.png" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Day Planner</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="card-body">
+              <a href="https://ryanwit.github.io/homework05_jquery_day_planner/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/homework05_jquery_day_planner" target="_blank"  class="card-link">Repo Link</a>
+            </div>
+          </div>
+
+          <div class="col-4 card" style="width: 18rem;">
+            <img class="card-img-top" src="assets/images/port2.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Placeholder</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+            <div class="card-body">
+              <a href="#" target="_blank" class="card-link">Deployed Link</a>
+              <a href="#" target="_blank" class="card-link">Repo Link</a>
+            </div>
+          </div>
     </div>
 
 
-  </div>
+
+    </div>
 
 
 
