Updated ReadMe File

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <div class="container">
-    <!-- Jumbro Section -->
+    <!-- Jumbo Section -->
     <div class="row">
        <div class="col-md-12 jumbotron">
           <h1 class="display-4">Ryan Witherspoon</h1>
