--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
       <!-- created container section for images of portfolio - images are mobile responsive -->
   <div class="container">
     <div class="row">
-        <div class="col-4 card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/pic1.png" alt="Card image cap">
+        <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/pic1.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Password Generator</h5>
               <p class="card-text">This website was created to randomly generate a password based of users criteria</p>
@@ -50,8 +50,8 @@
             </div>
           </div>
 
-          <div class="col-4 card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/pic2.png" alt="Card image cap">
+          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/pic2.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Code Quiz</h5>
               <p class="card-text">This quiz was created to test the users knowledge of javascript and html
@@ -63,11 +63,11 @@
             </div>
           </div>
 
-          <div class="col-4 card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/pic3.png" alt="Card image cap">
+          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/pic3.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Weather Dashboard</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Created Weather Dashboard that shows the current forecast of the selected city location and the next 5 days</p>
             </div>
             <div class="card-body">
               <a href="https://ryanwit.github.io/homework_06_weather_dashboard/" target="_blank"  class="card-link">Deployed Link</a>
@@ -77,23 +77,23 @@
     </div>
 
     <div class="row">
-        <div class="col-4 card bg-light mb-3" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/pic4.png" alt="Card image cap">
+        <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/pic4.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Project One</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Taco CO's musical playlist generator helps the user search for music, create and organize searched songs into a playlist, that can then be exported. Our application it the first of it's kind to also feature TacoTV, which displays unique GIFs while the user listens to music!</p>
             </div>
             <div class="card-body">
-              <a href="#" target="_blank"  class="card-link">Deployed Link</a>
-              <a href="#" target="_blank"  class="card-link">Repo Link</a>
+              <a href="https://noracurcio.github.io/Music-API-Group-Project/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/Music-API-Group-Project" target="_blank"  class="card-link">Repo Link</a>
             </div>
           </div>
 
-          <div class="col-4 card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/pic5.png" alt="Card image cap">
+          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/pic5.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Day Planner</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Create a simple calendar application that allows the user to save events for each hour of the day. This app will run in the browser and feature dynamically updated HTML and CSS powered by jQuery.</p>
             </div>
             <div class="card-body">
               <a href="https://ryanwit.github.io/homework05_jquery_day_planner/" target="_blank"  class="card-link">Deployed Link</a>
@@ -101,11 +101,11 @@
             </div>
           </div>
 
-          <div class="col-4 card" style="width: 18rem;">
-            <img class="card-img-top" src="assets/images/port2.jpg" alt="Card image cap">
+          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+            <img class="card-img-top mt-4" src="assets/images/port2.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Placeholder</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Notes about future project.</p>
             </div>
             <div class="card-body">
               <a href="#" target="_blank" class="card-link">Deployed Link</a>
