--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             </div>
             <div class="card-body">
               <a href="https://ryanwit.github.io/homework03_password_generator/" target="_blank"  class="card-link">Deployed Link</a>
-              <a href="https://github.com/ryanwit/homework03_password_generator" target="_blank" class="card-link">Repo Link</a>
+              <a href="https://github.com/ryanwit/homework03_password_generator" target="_blank" class="card-link ">Repo Link</a>
             </div>
           </div>
 
@@ -102,14 +102,14 @@
           </div>
 
           <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
-            <img class="card-img-top mt-4" src="assets/images/port2.jpg" alt="Card image cap">
+            <img class="card-img-top mt-4" src="assets/images/pic6.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Placeholder</h5>
-              <p class="card-text">Notes about future project.</p>
+              <h5 class="card-title">RyRy's Burger Bar</h5>
+              <p class="card-text">This Burger Bar Application allows the users to view, create, and update a burger.  I used MySQL, Node, Express, Handlebars, and a homemade ORM.  This site is deployed on Heroku.</p>
             </div>
             <div class="card-body">
-              <a href="#" target="_blank" class="card-link">Deployed Link</a>
-              <a href="#" target="_blank" class="card-link">Repo Link</a>
+              <a href="https://mighty-brushlands-34914.herokuapp.com/" target="_blank" class="card-link">Heroku Link</a>
+              <a href="https://github.com/ryanwit/homework_13_node_express_handlebars_hamburger" target="_blank" class="card-link">Repo Link</a>
             </div>
           </div>
     </div>
