--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       <!-- created container section for images of portfolio - images are mobile responsive -->
   <div class="container">
     <div class="row">
-        <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+        <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
             <img class="card-img-top mt-4" src="assets/images/pic1.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Password Generator</h5>
@@ -49,8 +49,8 @@
               <a href="https://github.com/ryanwit/homework03_password_generator" target="_blank" class="card-link ">Repo Link</a>
             </div>
           </div>
-
-          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+          <div class="col-1"></div>
+          <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
             <img class="card-img-top mt-4" src="assets/images/pic2.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Code Quiz</h5>
@@ -62,8 +62,8 @@
               <a href="https://github.com/ryanwit/homework04_code_quiz" target="_blank"  class="card-link">Repo Link</a>
             </div>
           </div>
-
-          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+          <div class="col-1"></div>
+          <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
             <img class="card-img-top mt-4" src="assets/images/pic3.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Weather Dashboard</h5>
@@ -74,10 +74,12 @@
               <a href="https://github.com/ryanwit/homework_06_weather_dashboard" target="_blank"  class="card-link">Repo Link</a>
             </div>
           </div>
+          <div class="col-1"></div>
     </div>
+    
 
     <div class="row">
-        <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+        <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
             <img class="card-img-top mt-4" src="assets/images/pic4.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Project One</h5>
@@ -89,19 +91,23 @@
             </div>
           </div>
 
-          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
-            <img class="card-img-top mt-4" src="assets/images/pic5.png" alt="Card image cap">
+          <div class="col-1"></div>
+
+          <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
+            <img class="card-img-top mt-4" src="assets/images/pic7.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Day Planner</h5>
-              <p class="card-text">Create a simple calendar application that allows the user to save events for each hour of the day. This app will run in the browser and feature dynamically updated HTML and CSS powered by jQuery.</p>
+              <h5 class="card-title">Project Two</h5>
+              <p class="card-text">Simple hotel Property Management System that allows users to checkin/out guests and view their reservation information</p>
             </div>
             <div class="card-body">
-              <a href="https://ryanwit.github.io/homework05_jquery_day_planner/" target="_blank"  class="card-link">Deployed Link</a>
-              <a href="https://github.com/ryanwit/homework05_jquery_day_planner" target="_blank"  class="card-link">Repo Link</a>
+              <a href="https://hotelmotel.herokuapp.com/" target="_blank"  class="card-link">Deployed Link</a>
+              <a href="https://github.com/ryanwit/hotel_motel" target="_blank"  class="card-link">Repo Link</a>
             </div>
           </div>
+          
+          <div class="col-1"></div>
 
-          <div class="col-3 card bg-light mb-3 mt-4 mr-4" style="width: 18rem;">
+          <div class="col-md-3 col-xs-12 card bg-light mb-3 mt-4 mr-4">
             <img class="card-img-top mt-4" src="assets/images/pic6.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">RyRy's Burger Bar</h5>
@@ -112,6 +118,7 @@
               <a href="https://github.com/ryanwit/homework_13_node_express_handlebars_hamburger" target="_blank" class="card-link">Repo Link</a>
             </div>
           </div>
+          <div class="col-1"></div>
     </div>
 
 
